# script_writer_agent

./: .gitignore  example_channel_setup.py  pyproject.toml  requirements.txt
script_writer_agent/: agent.py  channel_utils.py  config.py  first_eval_dataset.evalset.json  setup_channel.py
script_writer_agent/sub_agents/: researcher.py  script_director.py  script_editor.py  script_panner.py  script_writer.py  validation_checkers.py
